@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+ * Fixed a bug in which the browser can fail to start for a reference
+   sequence that has never been seen before.
+
 1.9.7     2013-06-25 15:41:22 Asia/Tokyo
 
  * Fixed a bug in which the initial viewing location (passed from a
